--- a/scss/blocks/welcome.scss
+++ b/scss/blocks/welcome.scss
@@ -43,7 +43,7 @@
 	&_btn {
     display: block;
     padding: 8px 15px;
-    background-color: #de0b5e;
+    background-color: #ff005c;
     border: 1px solid transparent;
 		border-radius: 5px;
 		font-size: 40px;
