--- a/jade/index.jade
+++ b/jade/index.jade
@@ -45,18 +45,24 @@ block content
 						span.steps_content
 							span.steps_title Register
 							span.steps_text Quick and easy signup
+						//- img(src="img/triangle1.svg", alt="").steps_triangle.steps_triangle--before
+						//- img(src="img/triangle1.svg", alt="").steps_triangle.steps_triangle--after
 					a(href="#").steps_item.steps_item--2
 						span.steps_num
 							img(src="img/num2.svg", alt="")
 						span.steps_content
 							span.steps_title Get your bonus 
 							span.steps_text Make your 1st deposit and claim
+						//- img(src="img/triangle2.svg", alt="").steps_triangle.steps_triangle--before
+						//- img(src="img/triangle2.svg", alt="").steps_triangle.steps_triangle--after
 					a(href="#").steps_item.steps_item--3
 						span.steps_num
 							img(src="img/num3.svg", alt="")
 						span.steps_content
 							span.steps_title Have fun
 							span.steps_text Let the rewards start rolling in!
+						//- img(src="img/triangle3.svg", alt="").steps_triangle.steps_triangle--before
+						//- img(src="img/triangle3.svg", alt="").steps_triangle.steps_triangle--after
 				//	/steps
 
 		// platforms
