--- a/scss/blocks/steps.scss
+++ b/scss/blocks/steps.scss
@@ -16,20 +16,30 @@
     &--1 {
       background-image: url(../img/rectangle1.png);
       // background-color: #000f9f;
-      z-index: 3;
     }
     &--2 {
       background-image: url(../img/rectangle2.png);
       // background-color: #ff005c;
-      z-index: 2;
     }
     &--3 {
       background-image: url(../img/rectangle3.png);
       // background-color: #75c758;
-      z-index: 1; 
     }
     span {
       display: block;
+    }
+  }
+  &_triangle {
+    display: block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    &--before {
+      right: calc(100% - 1px);
+      transform: rotate(180deg);
+    }
+    &--after {
+      left: calc(100% - 1px);
     }
   }
   &_num {
@@ -68,6 +78,9 @@
   @media (max-width: $break_md) {
     &_item {
       padding: 10px 20px 10px 20px;
+      &--1 {
+        background-image: url(../img/rectangle1-min.png);
+      }
     }
     &_num {
       width: 55px;
@@ -87,11 +100,9 @@
       
     }
     &_title {
-      // font-size: 41px;
       display: 35px;
     }
     &_text {
-      // font-size: 25px;
       font-size: 18px;
     }
   }
@@ -105,7 +116,6 @@
       font-size: 18px;
     }
     &_text {
-      // font-size: 16px;
       font-size: 10px;
     }
   }
