--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,8 +97,8 @@ body {
 .wrapper {
   @include wrapper();
 }
-*:-webkit-autofill {
-  -webkit-box-shadow: inset 0 0 0 50px #fff !important;
+a {
+  -webkit-tap-highlight-color: transparent;
 }
 *::placeholder {
   color: #a9a9a9;
