--- a/scss/blocks/steps.scss
+++ b/scss/blocks/steps.scss
@@ -2,28 +2,86 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  &_col {
+    width: 32%;
+    display: flex;
+    &:before {
+      content: '';
+      display: block;
+      width: 40px;
+      height: 100%;
+      background-size: 100% 50.5%;
+      background-position: top right,
+      bottom right;
+      background-repeat: no-repeat;
+    }
+    &:after {
+      content: '';
+      display: block;
+      width: 40px;
+      height: 100%;   
+      background-size: 100% 50.5%;
+      background-position: top left, bottom left;
+      background-repeat: no-repeat;
+    }
+    &--1 {
+      &:before {
+        background-image: 
+          linear-gradient(to top left, #000f9f 50%, transparent 51.5%),
+          linear-gradient(to bottom left, #000f9f 50%, transparent 51.5%);
+      }
+      &:after {
+        background-image: 
+          linear-gradient(to top right, #000f9f 50%, transparent 51.5%),
+          linear-gradient(to bottom right, #000f9f 50%, transparent 51.5%);
+      }
+    }
+    &--2 {
+      &:before {
+        background-image:
+          linear-gradient(to top left, #ff005c 50%, transparent 51.5%),
+          linear-gradient(to bottom left, #ff005c 50%, transparent 51.5%);
+      }
+
+      &:after {
+        background-image:
+          linear-gradient(to top right, #ff005c 50%, transparent 51.5%),
+          linear-gradient(to bottom right, #ff005c 50%, transparent 51.5%);
+      }
+    }
+    &--3 {
+      &:before {
+        background-image:
+          linear-gradient(to top left, #75c758 50%, transparent 51.5%),
+          linear-gradient(to bottom left, #75c758 50%, transparent 51.5%);
+      }
+
+      &:after {
+        background-image:
+          linear-gradient(to top right, #75c758 50%, transparent 51.5%),
+          linear-gradient(to bottom right, #75c758 50%, transparent 51.5%);
+      }
+    }
+  }
   &_item {
     display: flex;
     align-items: center;
-    width: 32%;
+    flex-grow: 1;
     min-height: 124px;
-    padding: 10px 20px 10px 30px;
+    padding: 10px 0;
     background-size: 100% 100%;
     font-family: "Muli", sans-serif;
     color: #fff;
     position: relative;
     line-height: 1;
     &--1 {
-      background-image: url(../img/rectangle1.png);
-      // background-color: #000f9f;
+      background-color: #000f9f;
     }
     &--2 {
-      background-image: url(../img/rectangle2.png);
-      // background-color: #ff005c;
+      background-color: #ff005c;
     }
     &--3 {
-      background-image: url(../img/rectangle3.png);
-      // background-color: #75c758;
+      background-color: #75c758;
     }
     span {
       display: block;
@@ -77,10 +135,6 @@
   }
   @media (max-width: $break_md) {
     &_item {
-      padding: 10px 20px 10px 20px;
-      &--1 {
-        background-image: url(../img/rectangle1-min.png);
-      }
     }
     &_num {
       width: 55px;
@@ -91,10 +145,16 @@
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
-    &_item {
-      min-height: auto;
+    &_col {
       width: 100%;
       margin-bottom: 20px;
+      &:after,
+      &:before {
+        width: 20px;
+      }
+    }
+    &_item {
+      min-height: auto;
     }
     &_num {
       
@@ -113,10 +173,10 @@
       font-size: 40px;
     }
     &_title {
-      font-size: 18px;
+      font-size: 20px;
     }
     &_text {
-      font-size: 10px;
+      font-size: 14px;
     }
   }
 }
