--- a/scss/blocks/steps.scss
+++ b/scss/blocks/steps.scss
@@ -10,6 +10,7 @@
       display: block;
       width: 40px;
       height: 100%;
+      margin-right: -1px;
       background-size: 100% 50.5%;
       background-position: top right,
       bottom right;
@@ -19,7 +20,8 @@
       content: '';
       display: block;
       width: 40px;
-      height: 100%;   
+      height: 100%;
+      margin-left: -1px;
       background-size: 100% 50.5%;
       background-position: top left, bottom left;
       background-repeat: no-repeat;
